k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tester-service
  namespace: tester
spec:
  selector:
    app: tester
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
