k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tester-ingress
  namespace: tester
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: tester.apps.getapp.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tester-service
            port:
              number: 3000
  tls:
    - hosts:
        - tester.apps.getapp.sh
      secretName: tester
